--- a/thesis/thesis-main.tex
+++ b/thesis/thesis-main.tex
@@ -95,6 +95,8 @@
     \tableofcontents
     \newpage
     \input{chapters/introduction}
+    \input{chapters/sample-figure}
+    \input{chapters/sample-table}
 
 
     % --- Bibliography ------------------------------------------------------
